bk_ida/gccida/g3/debug_bitmap_file
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/debug_bitmap_file/src/bitmap.c:1240:16: error: use of undeclared identifier 'off_6B8A7E'
fprintf( file, off_6B8A7E, ( unsigned int)( v6 + v4 + ( i->indx << 7))); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/debug_bitmap_file/src/obj/bitmap.o] Error 1
